# instalitre-microservices-post

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README  README.md  temp
migrations/2019-10-16-122230_create_posts/: up.sql
src/: db_connection.rs  errors.rs  lib.rs  main.rs  schema.rs
src/post/: handler.rs  mod.rs  model.rs  router.rs
src/post/models/: mod.rs  post.rs  s3.rs
test/integrationTest/: post_test.rs
test/unit_test/: post_test.rs
