[package]
name = "post"
version = "0.1.0"
authors = ["Simon PEROLS <simon.perols@oweb.pm>, Martin Gadan <martin.gadan@oweb.pm>"]
edition = "2018"

[dependencies]
actix = "0.8.3"
actix-web = "1.0.8"
validator = "0.10.0"
validator_derive = "0.10.0"
diesel = { version = "1.4", features = ["postgres", "uuid", "uuidv07", "serde_json", "r2d2"] }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
dotenv = "0.15.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
bcrypt = "0.6.1"
actix-http-test = "0.2.5"
bytes = "0.4.12"
prometheus = "0.7"
