[package]
name = "post"
version = "0.1.0"
authors = ["Simon PEROLS <simon.perols@oweb.pm>, Martin Gadan <martin.gadan@oweb.pm>"]
edition = "2018"

[dependencies]
actix = "0.8.3"
actix-web = "1.0.9"
validator = "0.10.0"
validator_derive = "0.10.0"
diesel = { version = "1.4.3", features = ["postgres", "uuidv07", "serde_json", "r2d2", "chrono"] }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
dotenv = "0.15.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
bcrypt = "0.6.1"
actix-http-test = "0.2.5"
bytes = "0.4.12"
futures = "0.1.25"
actix-multipart="0.1.4"
env_logger = "0.7.1"
base64="0.11.0"
rusoto_core="0.42.0"
rusoto_s3="0.42.0"
rusoto_signature = "0.42.0"
rusoto_credential = "0.42.0"
regex="1.3.1"
chrono="0.4.10"
actix-cors = "0.1.0"
openssl = "*"